static/main.css
/********************/
/* Universal Styles */
/********************/

body {
    font-family:Roboto;
    font-size:16px;
    height:100vh;
    background-image:url(images/mountain_forest_scenery.jpg);
    -webkit-background-size:cover;
    -moz-background-size:cover;
    -o-background-size:cover;
    background-size:cover;
}

section, header, nav {
    display:block;
}

/*****************/
/* Header Styles */
/*****************/

#pageheader {
    position:fixed;
    top:0px;
    left:0px;
    height:90px;
    width:100%;
}

header {
    height:100%;
    width:100%;
}

#logos {
    position:relative;
    margin:0px;
    width:100%;
    height:55px;
    background-color:#fff;
}

#logos img#usaid {
    position:absolute;
    top:5px;
    left:30px;
    width:150px;
}

#logos img#nasa {
    position:absolute;
    top:0px;
    left:210px;
    width:60px;
}

#logos img#adpc {
    position:absolute;
    top:9px;
    left:300px;
    width:80px;
}

#logos img#servir {
    position:absolute;
    top:12px;
    right:30px;
    width:250px;
}

nav {
    position:relative;
    margin:0px;
    width:100%;
    height:35px;
    background-color:#3a3a3a;
    color:#eee;
}

nav ul {
    position:absolute;
    top:8px;
    left:30px;
}

nav ul li {
    display:inline;
    list-style-type:none;
    padding:7px 10px;
    cursor:pointer;
}

nav ul li.highlight {
    text-shadow:0px 0px 4px #fff;
}

/***************/
/* Body Styles */
/***************/

#pagecontent {
    position:fixed;
    top:90px;
    left:0px;
    height:calc(100vh - 90px);
    width:100%;
    background-color:rgba(255,255,255,0.2);
}

#pagecontent a {
    color:#444;
    text-decoration:none;
}

#pagecontent a:hover {
    text-shadow:0px 0px 4px #333;
}

#pagecontent #all-pages {
    position:relative;
    height:100%;
    width:100%;
}

/**************/
/* About Page */
/**************/

#about {
    position:absolute;
    top:0%;
    left:10%;
    height:100%;
    width:76%;
    padding:2%;
    overflow:scroll;
    background:rgba(255, 255, 255, 0.8);
    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#CCFFFFFF, endColorstr=#CCFFFFFF);
    -ms-filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#CCFFFFFF, endColorstr=#CCFFFFFF);
}

#about h1 {
    font-size:1.2rem;
    font-weight:bold;
    padding:0.5rem;
    color:gray;
}

#about p {
    padding:0.5rem;
}

#about #about-logos {
    width:70%;
    margin:auto;
}

#about #about-logos img {
    display:inline;
    height:35px;
    padding:0.5rem;
}

#about p#copyright {
    padding:0.5rem;
    width:100%;
    text-align:center;
}

#about #bottom-spacer {
    height:100px;
    width:100%;
}

/****************************************/
/* Application Page Toplevel Components */
/****************************************/

#ecodash {
    position:absolute;
    top:0px;
    left:0px;
    height:100%;
    width:100%;
}

#ecodash #map {
    position:absolute;
    top:0px;
    left:0px;
    height:100%;
    width:100%;
}

#ecodash #ui {
    position:absolute;
    top:0px;
    right:0px;
    height:100%;
    width:30%;
    background-color:white;
    padding:0.5rem;
}

#ecodash #settings-button {
    position:absolute;
    top:0px;
    right:0px;
    width:34px;
    font-size:30px;
    font-weight:bold;
    text-align:center;
    background-color:white;
    box-shadow:0px 0px 5px gray;
    cursor:pointer;
    border-bottom-left-radius:3px;
}

#ecodash #general-info {
    position:absolute;
    top:5%;
    left:15%;
    height:76%;
    width:66%;
    padding:2%;
    border-radius:3px;
    background-color:white;
    box-shadow:0px 0px 5px gray;
    z-index:100;
}

#ecodash #general-info h1 {
    text-align:center;
    margin-bottom:0.5rem;
    font-size:2.4rem;
    font-weight:bold;
    color:gray;
}

#ecodash #general-info p {
    padding:0.5rem;
    font-size:1rem;
}

#ecodash #general-info input {
    margin:1rem 39%;
    padding:0.25rem;
    font-size:1.2rem;
}

#ecodash #legend {
    position:absolute;
    left:0px;
    bottom:55px;
    width:80px;
    background-color:white;
    padding:5px;
    border-top-right-radius:3px;
}

#ecodash #legend h2 {
    font-size:0.9rem;
    font-weight:bold;
    color:gray;
    text-align:center;
    margin:4px;
}

#ecodash #legend table td {
    font-size:0.8rem;
}

#ecodash #legend table td:last-child {
    padding-left:5px;
}

#ecodash #legend table td img {
    height:100px;
}

#ecodash #opacity {
    position:absolute;
    left:0px;
    bottom:0px;
    height:45px;
    width:80px;
    background-color:white;
    padding:5px;
}

#ecodash #opacity p {
    font-size:0.8rem;
    color:#333;
    text-align:center;
}

#ecodash #opacity input {
    position:absolute;
    left:5;
    top:25px;
    width:80px;
    height:22px;
    outline:none;
    overflow:hidden;
    pointer-events:none;
    cursor:pointer;
}

#ecodash #opacity input::-webkit-slider-thumb {
    position:relative;
    z-index:1;
    outline:0;
    pointer-events:all;
}

#ecodash #opacity input::-moz-range-thumb {
    position:relative;
    z-index:10;
    -moz-appearance:none;
    width:9px;
    pointer-events:all;
}

#ecodash #opacity input::-moz-range-track {
    position:relative;
    z-index:-1;
    background-color:rgba(100,100,100,1);
    border:0;
}

#ecodash #opacity input[type=range]::-moz-focus-outer {
    border:0;
}

#ecodash p#feedback {
    position:absolute;
    bottom:0;
    left:45%;
    width:10rem;
    height:1.2rem;
    border-top-left-radius:3px;
    border-top-right-radius:3px;
    background-color:white;
    padding:5px;
    font-size:0.8rem;
    text-align:center;
    box-shadow:0px 0px 5px gray;
}

/***********************************/
/* Application Page Sidebar Header */
/***********************************/

#ecodash #ui header {
    height:1.5rem;
    margin-bottom:0.5rem;
    border-bottom:2px solid #666;
}

#ecodash #ui header h1 {
    display:inline;
    font-size:1.2rem;
    font-weight:bold;
    color:gray;
}

#ecodash #ui header #collapse-button {
    display:inline;
    float:right;
    margin-right:10px;
    cursor:pointer;
}

#ecodash #ui header #info-button {
    display:inline;
    float:right;
    margin:2px 10px 0px 0px;
    padding:0px 3px;
    background-image:linear-gradient(rgb(255,255,255) 0px, rgb(224,224,224) 100%);
    background-position:0% 0%;
    background-repeat:repeat-x;
    border:1.25px solid rgb(204,204,204);
    border-radius:3px;
    box-shadow:rgba(255,255,255,0.15) 0px 1px 0px 0px inset,
               rgba(0,0,0,0.075) 0px 1px 1px 0px;
    font-size:12px;
    color:rgb(51,51,51);
    font-weight:400;
    line-height:16px;
    text-shadow:rgb(255,255,255) 0px 1px 0px;
    cursor:pointer;
}

/*********************************/
/* Application Page Map Controls */
/*********************************/

#ecodash #ui #controls {
    height:95%;
    overflow:scroll;
}

#ecodash #ui #controls h2 {
    font-size:1rem;
    font-weight:bold;
    color:gray;
    margin-bottom:5px;
}

#ecodash #ui #controls h3 {
    font-size:0.8rem;
    font-weight:bold;
    color:gray;
    margin:5px 0px;
}

#ecodash #ui #controls input[type=button] {
    height:28px;
    margin:2% 0% 2% 31%;
    font-size:0.8rem;
    color:#333;
}

#ecodash #ui #controls ul {
    height:28px;
    margin-left:10%;
}

#ecodash #ui #controls ul li {
    display:inline;
    list-style-type:none;
    padding:7px 10px;
}

#ecodash #ui #controls ul li input[type=radio] {
    height:100%;
    vertical-align:middle;
}

#ecodash #ui #controls ul li label {
    height:100%;
    vertical-align:middle;
    margin-left:5px;
    font-size:0.8rem;
    color:#333;
}

#ecodash #ui #controls p#polygon {
    margin-left:12%;
    padding:5px;
    font-size:0.8rem;
    color:#333;
}

#ecodash #ui #controls p#polygon em {
    font-style:italic;
}

#ecodash #ui #controls #chart {
    height:200px;
    width:385px;
}

/*****************************/
/* Multi-Range Slider Widget */
/*****************************/

.range-slider {
    position:relative;
    width:200px;
    height:45px;
    margin-left:20%;
}

.range-slider p {
    font-size:0.8rem;
    color:#333;
    text-align:center;
}

.range-slider input {
    position:absolute;
    left:0;
    top:20px;
    width:200px;
    height:22px;
    outline:none;
    overflow:hidden;
    pointer-events:none;
    cursor:pointer;
}

.range-slider input::-webkit-slider-thumb {
    position:relative;
    z-index:1;
    outline:0;
    pointer-events:all;
}

.range-slider input::-moz-range-thumb {
    position:relative;
    z-index:10;
    -moz-appearance:none;
    width:9px;
    pointer-events:all;
}

.range-slider input::-moz-range-track {
    position:relative;
    z-index:-1;
    background-color:rgba(100,100,100,1);
    border:0;
}

.range-slider input:last-of-type::-moz-range-track {
    -moz-appearance:none;
    background:none transparent;
    border:0;
}

.range-slider input[type=range]::-moz-focus-outer {
    border:0;
}

/******************/
/* Spinner Widget */
/******************/

.spinner {
    position:absolute;
    top:35%;
    left:35%;
    width:8rem;
    height:8rem;
    border-radius:4rem;
    border-bottom:1rem solid purple;
    -moz-animation:sweep 1s infinite linear;
    -webkit-animation:sweep 1s infinite linear;
}

@-moz-keyframes sweep {
    from {
        -moz-transform:rotate(0deg);
    }
    to {
        -moz-transform:rotate(360deg);
    }
}

@-webkit-keyframes sweep {
    from {
        -webkit-transform:rotate(0deg);
    }
    to {
        -webkit-transform:rotate(360deg);
    }
}

